# rust-otel-grafana

./: .gitignore  Cargo.toml  otelcol.yml
src/: main.rs  task_processor.rs  task_runner.rs  telemetry.rs
