[package]
name = "task_runner_with_otel"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
opentelemetry = { version = "0.27.1" }
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
rand = "0.8.5"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter", "registry"] }
uuid = "1.11.0"
tracing-core = "0.1.33"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry-stdout = "0.27.0"
